--- a/CN_AV/CN_AV_actressDatas.html
+++ b/CN_AV/CN_AV_actressDatas.html
@@ -269,7 +269,7 @@ function renderRelatedPage(page) {
           <span class="title">${d.title}</span>
         </div>
         <div class="card-info-bottom">
-          <div class="date">í ½í³… ${d.publish_date || ""}</div>
+          <div class="date">${d.publish_date || ""}</div>
         </div>
       </div>
     `;
