--- a/CN_AV/index.html
+++ b/CN_AV/index.html
@@ -65,8 +65,7 @@ body {
   <button onclick="filterCategory('无码', event)">无码</button>
   <button onclick="filterCategory('有码', event)">有码</button>
   <button onclick="filterCategory('女优目录', event)">女优目录</button>
-  <button onclick="filterCategory('奇幻', event)">奇幻</button>
-  <button onclick="filterCategory('悬疑', event)">悬疑</button>
+  <button onclick="filterCategory('AV出品厂', event)">AV出品厂</button>
 </div>
 
 <div class="main">
