--- a/CN_AV/player_template.html
+++ b/CN_AV/player_template.html
@@ -271,7 +271,7 @@ function getSeriesName() {
 }
 
 function loadSeriesData(seriesName) {
-    const dataUrl = `https://erik7761269084-arch.github.io/-/CN_AV/menu/${seriesName}_data.json`;
+	const dataUrl = `${window.location.origin}/CN_AV/menu/${seriesName}_data.json`;
     fetch(dataUrl)
     .then(res => { if(!res.ok) throw new Error("加载失败"); return res.json(); })
     .then(data => {
